<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#88000000">

    <LinearLayout
        android:id="@+id/bocadilloInfo"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_marginTop="157dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/guia_bocadillo"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/txtGuiaInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guia_info"
            android:textAlignment="center"
            android:textColor="#4A148C"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSiguienteGuia5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@drawable/guia_boton_gema"
            android:text="@string/guia_siguiente"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtOmitirGuia5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:text="@string/guia_omitir"
            android:textColor="#7B1FA2"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imgFlechaInfo"
        android:layout_width="72dp"
        android:layout_height="160dp"
        android:layout_gravity="top|end"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="7dp"
        android:contentDescription="Indicador de información"
        android:rotation="10"
        android:src="@drawable/guia_flecha_info" />

</FrameLayout>